# demo

./: README.md  docker-compose.yaml  init.sql  pyproject.toml
src/: Dockerfile  main.py  requirements.txt  utils.py
src/product/: api.py  query.py  schema.py
tests/: test_product.py
