[project]
name = "GainMiles-demo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "yui", email = ""},
]
dependencies = [
    "apiflask>=2.2.0",
    "SQLAlchemy>=2.0.32",
    "uvicorn>=0.30.6",
    "mysql-connector-python>=9.0.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
